--- a/index.htm
+++ b/index.htm
@@ -137,7 +137,7 @@
       .attr("stroke", "#666666")
       .attr("opacity", 0.75)
       .attr("stroke-width", 2.5*height/450)
-      .attr("stroke-dasharray", ("3, 3"))
+      .attr("stroke-dasharray", (3*height/450,7*height/450))
       .attr("id","prior");
 
     // Plot the posterior
